package group6.semester.project.grpcClient.Report;

import group6.semester.project.model.Report;

import java.util.List;

public class ReportGRPCClientImpl implements ReportClient {
    @Override
    public void AddReport(Report report) {

    }

    @Override
    public void RemoveReport(Report report) {

    }

    @Override
    public List<Report> getReports() {
        return null;
    }
}
